[gd_scene load_steps=2 format=3 uid="uid://c4qdihtmlpj6n"]

[ext_resource type="Script" uid="uid://clue0snv1skfj" path="res://Scripts/ui/hud.gd" id="1_flrw0"]

[node name="HUD" type="CanvasLayer" groups=["hud"]]
script = ExtResource("1_flrw0")

[node name="MarginContainer" type="MarginContainer" parent="."]
offset_right = 40.0
offset_bottom = 54.0

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HealthLabel" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
text = "HP: 5 / 5"

[node name="HealthBar" type="ProgressBar" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
max_value = 5.0
value = 5.0

[node name="DamageFlash" type="ColorRect" parent="."]
z_index = 10
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(1, 0, 0, 0)
